syntax = "proto3";

package movie;

service Movie {
  rpc AddMovie(AddReq) returns (AddRsp) {}
  rpc UpdateMovie(UpdateReq) returns (UpdateRsp) {}
  rpc UpdateMovieByGid(UpdateReq) returns (UpdateRsp) {}
  rpc SelectAll(Empty) returns (SelectRsp) {}
}

message MovieMsg {
  string id = 1;
  string title = 2;
  string uri = 3;
  string status = 4;
  string gid = 5;
}

message AddReq {
  MovieMsg movie = 1;
}

message AddRsp {
  string msg = 1;
}

message UpdateReq {
  MovieMsg movie = 1;
}

message UpdateRsp {
  string msg = 1;
}

message SelectRsp {
  repeated MovieMsg movies = 1;
}

message Empty {
}